style(alerts): fix text not being visible for all alerts
White on light green = no go

--- a/style/scss/src/_alerts.scss
+++ b/style/scss/src/_alerts.scss
@@ -1,5 +1,5 @@
 $notify-error: #eb5757;
-$notify-success: #41e485;
+$notify-success: #11b957;
 $notify-warning: #f38d49;
 $notify-gray: #333333;
 $notify-gray-2: #4d4d4d;
